<resources>
    <string name="app_name">EbPhotoStoreNative</string>
    <string name="action_settings">Settings</string>
    <string name="action_network">Network</string>
    <string name="take_photo">Take a Photo</string>
    <string name="nav_photo">Navigate to Take a Photo</string>
    <string name="title_activity_capture_picture">CapturePictureActivity</string>
    <string name="login">Login</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="title_activity_add_patient">AddPatientActivity</string>
    <string name="patient_list">Patients</string>
    <string name="add_new_patient">+</string>
    <string name="list_name">Name</string>
    <string name="list_id">ID</string>
    <string name="list_status">Status</string>
    <string name="list_info">\u24d8</string>
    <string name="title_activity_list_patient">ListPatientActivity</string>
    <string name="note_to_share">Notes to share with government health team</string>
    <string name="back_patient_list">Back to Patients</string>
    <string name="patient_first_name">Patient First Name</string>
    <string name="patient_last_name">Patient Last Name</string>
    <string name="patient_mobile_number">Patient Mobile Number</string>
    <string name="patient_contact_details">Patient Contact Details (Address, location)</string>
    <string name="chw_notes">CHW Notes for Patient</string>
    <string name="add_photo">Add Photo</string>
    <string name="add_photo_desc">Click to add photo of the RDT strip to this record</string>
    <string name="patient_entered_by">Patient entered by: </string>
    <string name="add_patient_disclaimer">Note: If this patient is determined to be positive for Ebola, you will contacted by a government healthcare worker at +263 xx yyyy (via voice or text).</string>
    <string name="add_patient">Add Patient</string>
    <string name="title_activity_patient_detail">PatientDetailActivity</string>
    <string name="photo_capture_details">Photo Capture Details</string>
    <string name="date_and_time">Date &amp; Time</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="retake_photo">Retake Photo</string>
    <string name="follow_up">follow-up:</string>
</resources>
